--- a/src/app/courses/mycourses/mycourses.component.html
+++ b/src/app/courses/mycourses/mycourses.component.html
@@ -1,25 +1,37 @@
-<div class="col-md-4 mb-4" *ngFor="let course of courses">
+<!-- <div class="col-md-4 mb-4" *ngFor="let course of courses">
   <div class="card shadow-lg rounded-4">
-        <!-- Course Image -->
+
         <img [src]="course.image" class="card-img-top img-fluid book-image" alt="Course Image">
 
         <div class="card-body text-center">
-          <!-- Course Name -->
+
           <h5 class="card-title fw-bold text-primary">{{ course.courseName }}</h5>
 
-          <!-- Short description -->
+
           <p class="card-text text-muted">✍️ {{ course.description }}</p>
 
-          <!-- Course Price -->
+
           <p class="card-text text-success">💲 <strong>Price:</strong> ${{ course.price }}</p>
 
-          <!-- View details Button -->
+
           <div class="button-container">
             <a href="/course-details" class="btn btn-success shadow-sm fw-bold "> Details</a>
           </div>
 
         </div>
       </div>
+</div> -->
+
+
+<div *ngIf="courses.length; else noCourses">
+  <h2>My Courses</h2>
+  <ul>
+    <li *ngFor="let course of courses">
+      <h3>{{ course.courseName }}</h3>
+      <p>{{ course.description }}</p>
+    </li>
+  </ul>
 </div>
-
-
+<ng-template #noCourses>
+  <p>You are not enrolled in any courses.</p>
+</ng-template>
