--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,4 +1,5 @@
 <div class="body">
+   <button class="btn btn-primary" (click)="addNewUser()">Add User</button>
   <h1>User Panel</h1>
   <table class="table table-striped table-hover table-bordered">
     <thead>
@@ -50,5 +51,5 @@
       }
     </tbody>
   </table>
-  <button class="btn btn-primary" (click)="addNewUser()">Add User</button>
+  <!-- <button class="btn btn-primary" (click)="addNewUser()">Add User</button> -->
 </div>
