--- a/src/app/enrollments/enrollment/enrollment.component.html
+++ b/src/app/enrollments/enrollment/enrollment.component.html
@@ -2,37 +2,30 @@
   <form (ngSubmit)="onSubmit()">
     <h1>Enrollment Form</h1>
 
-    <!-- Course Title Field -->
+
     <div>
       <label for="courseTitle">Course Title:</label>
       <input type="text" id="courseTitle" name="courseTitle" [(ngModel)]="enrollments.courseName" required readonly />
     </div>
 
-    <!-- Full Name Field -->
+
     <div>
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="name" [(ngModel)]="enrollments.name" required />
     </div>
 
-    <!-- Email Field -->
+
     <div>
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" [(ngModel)]="enrollments.email" required />
     </div>
 
-    <!-- Mobile No Field -->
+
     <div>
       <label for="mobile">Mobile No:</label>
       <input type="text" id="mobile" name="mobile" [(ngModel)]="enrollments.phone" required />
     </div>
 
-    <!-- Confirm Mobile No Field -->
-    <!-- <div>
-      <label for="cmobile">Confirm Mobile No:</label>
-      <input type="text" id="cmobile" name="cmobile" [(ngModel)]="enrollments.confirmMobile" required />
-    </div> -->
-
-    <!-- Payment Method Field -->
     <div>
       <label for="payment">Payment Method:</label>
       <input type="radio" name="pay" id="bkash" value="bkash" [(ngModel)]="enrollments.paymentMethod" /> bKash <br />
@@ -43,3 +36,86 @@
     <button type="submit" class="btn-success">Submit</button>
   </form>
 </fieldset>
+
+
+
+<!-- Authentication -->
+
+<!-- <fieldset>
+  <form (ngSubmit)="onSubmit()">
+    <h1>Enrollment Form</h1>
+
+    @if (isAuthenticated) {
+
+    <div>
+      <label for="courseTitle">Course Title:</label>
+      <input type="text" id="courseTitle" name="courseTitle" [(ngModel)]="enrollments.courseName" required readonly />
+    </div>
+
+
+    <div>
+      <label for="name">Full Name:</label>
+      <input type="text" id="name" name="name" [(ngModel)]="enrollments.name" required />
+    </div>
+
+
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" [(ngModel)]="enrollments.email" required />
+    </div>
+
+
+    <div>
+      <label for="mobile">Mobile No:</label>
+      <input type="text" id="mobile" name="mobile" [(ngModel)]="enrollments.phone" required />
+    </div>
+
+
+    <div>
+      <label for="payment">Payment Method:</label>
+      <input type="radio" name="pay" id="bkash" value="bkash" [(ngModel)]="enrollments.paymentMethod" /> bKash <br />
+      <input type="radio" name="pay" id="rocket" value="rocket" [(ngModel)]="enrollments.paymentMethod" /> Rocket <br />
+      <input type="radio" name="pay" id="dcard" value="dcard" [(ngModel)]="enrollments.paymentMethod" /> Debit Card
+    </div>
+
+    <button type="submit" class="btn-success">Submit</button>
+
+    } @else {
+
+    <div>
+      <label for="courseTitle">Course Title:</label>
+      <input type="text" id="courseTitle" name="courseTitle" [(ngModel)]="enrollments.courseName" required readonly />
+    </div> -->
+
+      <!-- Full Name Field -->
+    <!-- <div>
+      <label for="name">Full Name:</label>
+      <input type="text" id="name" name="name" [(ngModel)]="student.name" required />
+    </div> -->
+
+        <!-- Email Field -->
+    <!-- <div>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" [(ngModel)]="student.email" required />
+    </div> -->
+
+    <!-- Mobile No Field -->
+    <!-- <div>
+      <label for="mobile">Mobile No:</label>
+      <input type="text" id="mobile" name="mobile" [(ngModel)]="student.phone" required />
+    </div> -->
+
+
+  <!-- Payment Method Field -->
+    <!-- <div>
+      <label for="payment">Payment Method:</label>
+      <input type="radio" name="pay" id="bkash" value="bkash" [(ngModel)]="enrollments.paymentMethod" /> bKash <br />
+      <input type="radio" name="pay" id="rocket" value="rocket" [(ngModel)]="enrollments.paymentMethod" /> Rocket <br />
+      <input type="radio" name="pay" id="dcard" value="dcard" [(ngModel)]="enrollments.paymentMethod" /> Debit Card
+    </div>
+
+    <button type="submit" class="btn-success">Submit</button>
+    }
+
+  </form>
+</fieldset> -->
