--- a/src/app/admins/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admins/admin-dashboard/admin-dashboard.component.html
@@ -52,6 +52,9 @@
     <li>
       <a href="recordClasses"> <i class="bi bi-play-btn-fill"></i> Classes</a>
     </li>
+     <li>
+      <a href="/student-list"> <i class="bi bi-person-fill"></i> Students </a>
+    </li>
   </ul>
 </div>
 </div>
