--- a/src/app/teachers/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/teachers/teacher-dashboard/teacher-dashboard.component.html
@@ -7,7 +7,7 @@
           </a>
       </li>
       <li>
-          <a href="/courselist">
+          <a href="/myCourses">
             <i class="bi bi-incognito"></i> Courses
           </a>
       </li>
