assignment submission done

--- a/src/app/students/student-dashboard/student-dashboard.component.html
+++ b/src/app/students/student-dashboard/student-dashboard.component.html
@@ -33,12 +33,19 @@
         </svg>  Bookstore</a></li> -->
 
 
-    <li><a href="/add-feedback"> <i class="bi bi-wechat"></i> Feedback</a></li>
+    <li>
+      <a href="/add-feedback"> <i class="bi bi-wechat"></i> Feedback</a>
+    </li>
+
+        <li><a href="submit">
+        <i class="bi bi-play-btn-fill"></i> Submit Assignment</a>
+      </li>
 
 
 
     <li><a href="studentrecordClasses">
-        <i class="bi bi-play-btn-fill"></i> Record Classes</a></li>
+        <i class="bi bi-play-btn-fill"></i> Record Classes</a>
+      </li>
 
 
   </ul>
