--- a/src/app/assignments/assignment-add/assignment-add.component.html
+++ b/src/app/assignments/assignment-add/assignment-add.component.html
@@ -8,12 +8,12 @@
     <input type="text" name="topic" [(ngModel)]="assignments.topic" required /><br />
 
    <label for="courseId">Course_Id</label><br>
-   <!-- <select name="courseId" [(ngModel)]="assignments.courseId" required style="width: 100%;">
+   <select name="courseId" [(ngModel)]="assignments.courseId" required style="width: 100%;">
     <option *ngFor="let course of cor" [value]="course.id">
-      {{ course.id }} {{ course.name }}
+      {{ course.id }} {{ course.courseName }}
     </option>
-  </select><br /> -->
-   <input type="text" name="course_id" [(ngModel)]="assignments.courseId" required /><br />
+  </select><br />
+   <!-- <input type="text" name="course_id" [(ngModel)]="assignments.courseId" required /><br /> -->
 
    <label for="dueDate">DueDate:</label><br />
    <input type="date" name="dueDate"  [(ngModel)]="assignments.dueDate" required /><br />
