--- a/src/app/enrollments/enrollment/enrollment.component.html
+++ b/src/app/enrollments/enrollment/enrollment.component.html
@@ -1,4 +1,4 @@
-<fieldset>
+<!-- <fieldset>
   <form (ngSubmit)="onSubmit()">
     <h1>Enrollment Form</h1>
 
@@ -35,13 +35,13 @@
 
     <button type="submit" class="btn-success">Submit</button>
   </form>
-</fieldset>
+</fieldset> -->
 
 
 
 <!-- Authentication -->
 
-  <!-- <fieldset>
+  <fieldset>
   <form (ngSubmit)="onSubmit()">
     <h1>Enrollment Form</h1>
 
@@ -85,29 +85,29 @@
     <div>
       <label for="courseTitle">Course Title:</label>
       <input type="text" id="courseTitle" name="courseTitle" [(ngModel)]="enrollments.courseName" required readonly />
-    </div> -->
+    </div>
 
       <!-- Full Name Field -->
-    <!-- <div>
+    <div>
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="name" [(ngModel)]="student.name" required  />
-    </div> -->
+    </div>
 
         <!-- Email Field -->
-     <!-- <div>
+     <div>
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" [(ngModel)]="student.email" required />
-    </div> -->
+    </div>
 
     <!-- Mobile No Field -->
-     <!-- <div>
+     <div>
       <label for="mobile">Mobile No:</label>
       <input type="text" id="mobile" name="mobile" [(ngModel)]="student.phone" required />
-    </div> -->
+    </div>
 
 
   <!-- Payment Method Field -->
-     <!-- <div>
+     <div>
       <label for="payment">Payment Method:</label>
       <input type="radio" name="pay" id="bkash" value="bkash" [(ngModel)]="enrollments.paymentMethod" /> bKash <br />
       <input type="radio" name="pay" id="rocket" value="rocket" [(ngModel)]="enrollments.paymentMethod" /> Rocket <br />
@@ -118,7 +118,7 @@
     }
 
   </form>
-</fieldset> -->
+</fieldset>
 
 
 
