--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -30,7 +30,7 @@
 
           <!-- View details Button -->
           <div class="button-container">
-            <a href="/course-details" class="btn btn-success shadow-sm fw-bold "> Details</a>
+            <a href="/details" class="btn btn-success shadow-sm fw-bold "> Details</a>
             <a [routerLink]="'/enroll'" [queryParams]="{ title: course.courseName }"
                           class="btn btn-success shadow-sm fw-bold">
               Enroll
