--- a/src/app/users/add-user/add-user.component.html
+++ b/src/app/users/add-user/add-user.component.html
@@ -56,6 +56,8 @@
           <label for="address">Address:</label><br />
           <input type="text" [(ngModel)]="users.address" name="address" required /><br />
 
+          <label for="address">Bio:</label><br />
+          <textarea name="bio" id="bio" [(ngModel)]="users.bio"></textarea>
           <label for="image">UserImage</label><br />
           <input type="text" name="image" [(ngModel)]="users.avatarUrl" required /><br />
 
