--- a/src/app/teachers/teacher-list/teacher-list.component.html
+++ b/src/app/teachers/teacher-list/teacher-list.component.html
@@ -14,31 +14,30 @@
 
 <section class="list">
   <div class="container">
-    <h1>Teacher List</h1>
-    <table class="table  table-striped table-hover table-bordered ">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Name</th>
-          <th>Father Name</th>
-         <th>Image</th>
-         <th>Phone</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (teacher of teachers; track teacher.name) {
-        <!-- <tr *ngFor="let instructor of instructors"> -->
-          <tr>
-            <td>{{teachers.indexOf(teacher) + 1}}</td>
-          <td>{{ teacher.name }}</td>
-          <td>{{ teacher.fatherName }}</td>
-          <td><img src="{{teacher.avatarUrl }}" alt="Image" class="img-thumbnail" width="60" height="60"/></td>
-          <td>{{ teacher.phone }}</td>
+    <!-- <h1>Teacher List</h1> -->
+     @for (teachers of teacher; track teachers.name) {
+    <div class="card md-4 mb-5" style="max-width: 400px;">
 
-        </tr>}
-      </tbody>
-    </table>
+          <div class="row mt-4">
+            <div class="col-md-6">
+              <img src="{{teachers.avatarUrl}}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-6">
+              <div>
+                <div class="card-title ">
+                  <h5>{{teachers.name}} </h5>
+                  <h6>Course:{{teachers.courseName}}</h6>
+                   <p>{{teachers.bio}}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
 
+          </div>
+
+        </div>
+      }
   </div>
 
 
